--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="logic.js"></script>
   </head>
-  <body>
+  <body> 
+	 <center><h1>TIC TAC TOE!!!</h1></center>
     <table>
       <tr>
         <td class="cell" id="0"></td>
