--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="logic.js"></script>
   </head>
   <body> 
-	 <center><h1>TIC TAC TOE!!!</h1></center>
+	  <center><h1>TIC TAC TOE!!!</h1><h2>SOLITARIO</H2></center>
     <table>
       <tr>
         <td class="cell" id="0"></td>
